k8s-with-backend-and-db/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: devops-team
spec:
  ingressClassName: nginx
  rules:
  - host: user.debjyoti.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3000
